--- a/app/static/CSS/search.css
+++ b/app/static/CSS/search.css
@@ -233,6 +233,14 @@ header {
 }
 
 /*------- !SEARCH BAR -------*/
+.search-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 
 #search {
     display: flex;
